--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ venv/
 /.idea/modules.xml
 /.idea/inspectionProfiles/profiles_settings.xml
 /.idea/inspectionProfiles/Project_Default.xml
+/.idea/vcs.xml
